tdf#131218 Assure standard mode at shell before goto content

Also resolves tdf#133039

This is a copy of SwPostItMgr::AssureStdModeAtShell with an addition of
EnterStdMode used when not in frame mode and no object is selected. It
makes focus on content, from Navigator goto content, work as expected
for all content types.

Change-Id: Id23ea8f603b7f5d90f1e23f1eb82db292c71c499